--- a/pom.xml
+++ b/pom.xml
@@ -1,207 +1,257 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- ~ JBoss, Home of Professional Open Source. ~ Copyright 2010, Red Hat, Inc., and individual contributors ~ as indicated by the @author tags. 
-    See the copyright.txt file in the ~ distribution for a full listing of individual contributors. ~ ~ This is free software; you can redistribute 
-    it and/or modify it ~ under the terms of the GNU Lesser General Public License as ~ published by the Free Software Foundation; either version 
-    2.1 of ~ the License, or (at your option) any later version. ~ ~ This software is distributed in the hope that it will be useful, ~ but WITHOUT 
-    ANY WARRANTY; without even the implied warranty of ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU ~ Lesser General Public 
-    License for more details. ~ ~ You should have received a copy of the GNU Lesser General Public ~ License along with this software; if not, write 
-    to the Free ~ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA ~ 02110-1301 USA, or see the FSF site: http://www.fsf.org. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	See the copyright.txt file in the ~ distribution for a full listing of individual contributors. ~ ~ This is free software; you can redistribute 
+	it and/or modify it ~ under the terms of the GNU Lesser General Public License as ~ published by the Free Software Foundation; either version 
+	2.1 of ~ the License, or (at your option) any later version. ~ ~ This software is distributed in the hope that it will be useful, ~ but WITHOUT 
+	ANY WARRANTY; without even the implied warranty of ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU ~ Lesser General Public 
+	License for more details. ~ ~ You should have received a copy of the GNU Lesser General Public ~ License along with this software; if not, write 
+	to the Free ~ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA ~ 02110-1301 USA, or see the FSF site: http://www.fsf.org. -->
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.jboss</groupId>
-        <artifactId>jboss-parent</artifactId>
-        <version>8</version>
-    </parent>
+	<parent>
+		<groupId>org.jboss</groupId>
+		<artifactId>jboss-parent</artifactId>
+		<version>9</version>
+	</parent>
 
-    <groupId>org.jboss.as</groupId>
-    <artifactId>jboss-as-translations</artifactId>
-    <version>1.0.0.Beta1-SNAPSHOT</version>
+	<groupId>org.jboss.as</groupId>
+	<artifactId>jboss-as-translations</artifactId>
+	<version>1.0.0.Beta1-SNAPSHOT</version>
 
-    <name>JBoss AS7 Translations</name>
-    <description>AS7 i18n project</description>
+	<name>JBoss AS7 Modules Translations</name>
+	<description>AS7 i18n for modules project</description>
 
-    <packaging>jar</packaging>
+	<packaging>jar</packaging>
 
-    <licenses>
-        <license>
-            <name>lgpl</name>
-            <url>http://repository.jboss.org/licenses/lgpl-2.1.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-    
-    
-    <properties>
+	<licenses>
+		<license>
+			<name>lgpl</name>
+			<url>http://repository.jboss.org/licenses/lgpl-2.1.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
-        <!-- Build configuration -->
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
-        <!-- Options to override the compiler arguments directly on the compiler arument line to separate between what the IDE understands as the source 
-            level and what the Maven compiler actually use. -->
-        <maven.compiler.argument.target>${maven.compiler.target}</maven.compiler.argument.target>
-        <maven.compiler.argument.source>${maven.compiler.source}</maven.compiler.argument.source>
-        
-        <!-- Dependency versions. Please keep alphabetical. Each version property should be of the form "version.<groupId>". For example: <version.org.jboss.as> 
-            In cases where multiple artifacts use the same groupId but have different versions, add the artifactId or other qualifier to the property name. 
-            For example: <version.org.jboss.as.console> -->
 
-        <!-- checkstyle, 2.5 has some bug wrt to configLocation... It requires checkstyle to be in artifact... -->
-        <version.checkstyle.plugin>2.4</version.checkstyle.plugin>
-        <version.junit>4.10</version.junit>
-        
-        <!-- Checkstyle configuration -->
-        <linkXRef>false</linkXRef>
-    </properties>
+	<properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${version.junit}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+		<!-- Build configuration -->
+		<maven.compiler.source>1.6</maven.compiler.source>
+		<maven.compiler.target>1.6</maven.compiler.target>
+		<!-- Options to override the compiler arguments directly on the compiler arument line to separate between what the IDE understands as the source 
+			level and what the Maven compiler actually use. -->
+		<maven.compiler.argument.target>${maven.compiler.target}</maven.compiler.argument.target>
+		<maven.compiler.argument.source>${maven.compiler.source}</maven.compiler.argument.source>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>buildnumber-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>create</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <doCheck>false</doCheck>
-                    <doUpdate>false</doUpdate>
-                    <revisionOnScmFailure>UNKNOWN</revisionOnScmFailure>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>${version.checkstyle.plugin}</version>
-                <configuration>
-                    <configLocation>checkstyle.xml</configLocation>
-                    <consoleOutput>true</consoleOutput>
-                    <failsOnError>true</failsOnError>
-                    <enableRSS>false</enableRSS>
-                    <enableRSSSummary>false</enableRSSSummary>
-                    <useFile />
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>check-style</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>checkstyle</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>${version.jar.plugin}</version>
-                    <configuration>
-                        <archive>
-                            <manifest>
-                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                            </manifest>
-                            <manifestEntries>
-                                <!--TODO -->
-                            </manifestEntries>
-                            <manifestSections>
-                                <manifestSection>
-                                    <name>Build-Information</name>
-                                    <manifestEntries>
-                                        <Maven-Version>${maven.version}</Maven-Version>
-                                        <Java-Version>${java.version}</Java-Version>
-                                        <Java-Vendor>${java.vendor}</Java-Vendor>
-                                        <Os-Name>${os.name}</Os-Name>
-                                        <Os-Arch>${os.arch}</Os-Arch>
-                                        <Os-Version>${os.version}</Os-Version>
-                                        <Scm-Url>${jboss.as.scm.url}</Scm-Url>
-                                        <Scm-Connection>${jboss.as.scm.connection}</Scm-Connection>
-                                        <Build-Time>${build.timestamp}</Build-Time>
-                                        <Scm-Version>${buildNumber}</Scm-Version>
-                                    </manifestEntries>
-                                </manifestSection>
-                            </manifestSections>
-                        </archive>
-                    </configuration>
-                </plugin>
+		<!-- Dependency versions. Please keep alphabetical. Each version property should be of the form "version.<groupId>". For example: <version.org.jboss.as> 
+			In cases where multiple artifacts use the same groupId but have different versions, add the artifactId or other qualifier to the property name. 
+			For example: <version.org.jboss.as.console> -->
+		<version.dependency.plugin>2.4</version.dependency.plugin>
 
-                <!-- Checkstyle -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-checkstyle-plugin</artifactId>
-                    <version>${version.checkstyle.plugin}</version>
-                    <configuration>
-                        <configLocation>checkstyle.xml</configLocation>
-                        <consoleOutput>true</consoleOutput>
-                        <failsOnError>true</failsOnError>
-                        <useFile />
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>check-style</id>
-                            <phase>compile</phase>
-                            <goals>
-                                <goal>checkstyle</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-        <extensions>
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-webdav-jackrabbit</artifactId>
-                <version>1.0-beta-7</version>
-            </extension>
-        </extensions>
-    </build>
+		<version.org.jboss.logging.jboss-logging>3.1.1.GA</version.org.jboss.logging.jboss-logging>
+		<version.org.jboss.logging.jboss-logging-processor>1.0.3.Final</version.org.jboss.logging.jboss-logging-processor>
+		<version.org.jboss.logmanager.jboss-logmanager>1.3.1.Final</version.org.jboss.logmanager.jboss-logmanager>
+		<version.org.jboss.logmanager.log4j-jboss-logmanager>1.0.0.Final</version.org.jboss.logmanager.log4j-jboss-logmanager>
+	</properties>
 
-    <repositories>
-        <repository>
-            <id>jboss-public-repository-group</id>
-            <name>JBoss Public Repository Group</name>
-            <url>http://repository.jboss.org/nexus/content/groups/public/</url>
-            <layout>default</layout>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </snapshots>
-        </repository>
-    </repositories>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.jboss.as</groupId>
+				<artifactId>jboss-as-server</artifactId>
+				<version>7.2.0.Alpha1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.logging</groupId>
+				<artifactId>jboss-logging</artifactId>
+				<version>${version.org.jboss.logging.jboss-logging}</version>
+			</dependency>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>jboss-public-repository-group</id>
-            <name>JBoss Public Repository Group</name>
-            <url>http://repository.jboss.org/nexus/content/groups/public/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
+			<dependency>
+				<groupId>org.jboss.logging</groupId>
+				<artifactId>jboss-logging-processor</artifactId>
+				<version>${version.org.jboss.logging.jboss-logging-processor}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jboss.logging</groupId>
+				<artifactId>jul-to-slf4j-stub</artifactId>
+				<version>${version.org.jboss.logging.jul-to-slf4j-stub}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jboss.logmanager</groupId>
+				<artifactId>jboss-logmanager</artifactId>
+				<version>${version.org.jboss.logmanager.jboss-logmanager}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jboss.logmanager</groupId>
+				<artifactId>log4j-jboss-logmanager</artifactId>
+				<version>${version.org.jboss.logmanager.log4j-jboss-logmanager}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.jboss.as</groupId>
+			<artifactId>jboss-as-server</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging-processor</artifactId>
+			<!-- This is a compile-time dependency of this project, but is not needed at compile or runtime by other projects that depend on this project. -->
+			<scope>provided</scope>
+			<optional>true</optional>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>buildnumber-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>create</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<doCheck>false</doCheck>
+					<doUpdate>false</doUpdate>
+					<revisionOnScmFailure>UNKNOWN</revisionOnScmFailure>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>unpack</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.jboss.as</groupId>
+									<artifactId>jboss-as-server</artifactId>
+									<version>7.2.0.Alpha1-SNAPSHOT</version>
+									<classifier>sources</classifier>
+									<type>jar</type>
+									<overWrite>false</overWrite>
+									<outputDirectory>src/main/java</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+							<includes>**/ServerLogger.java,**/ServerMessages.java</includes>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>true</overWriteSnapshots>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArgument>
+						-AgeneratedTranslationFilesPath=${project.build.directory}/generated-translation-files
+					</compilerArgument>
+				</configuration>
+			</plugin>
+		</plugins>
+
+
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>${version.jar.plugin}</version>
+					<configuration>
+						<archive>
+							<manifest>
+								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+							</manifest>
+							<manifestEntries>
+								<!--TODO -->
+							</manifestEntries>
+							<manifestSections>
+								<manifestSection>
+									<name>Build-Information</name>
+									<manifestEntries>
+										<Maven-Version>${maven.version}</Maven-Version>
+										<Java-Version>${java.version}</Java-Version>
+										<Java-Vendor>${java.vendor}</Java-Vendor>
+										<Os-Name>${os.name}</Os-Name>
+										<Os-Arch>${os.arch}</Os-Arch>
+										<Os-Version>${os.version}</Os-Version>
+										<Scm-Url>${jboss.as.scm.url}</Scm-Url>
+										<Scm-Connection>${jboss.as.scm.connection}</Scm-Connection>
+										<Build-Time>${build.timestamp}</Build-Time>
+										<Scm-Version>${buildNumber}</Scm-Version>
+									</manifestEntries>
+								</manifestSection>
+							</manifestSections>
+						</archive>
+						<includes>
+							<include>**/*</include>
+						</includes>
+						<!-- exclude EN files, as those are present by default. -->
+						<excludes>
+							<exclude>**/*ServerLogger.class</exclude>
+							<exclude>**/*ServerLogger_$logger.class</exclude>
+							<exclude>**/*ServerMessages.class</exclude>
+							<exclude>**/*ServerMessages_$bundle.class</exclude>
+						</excludes>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>${version.dependency.plugin}</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
+	<repositories>
+		<repository>
+			<id>jboss-public-repository-group</id>
+			<name>JBoss Public Repository Group</name>
+			<url>http://repository.jboss.org/nexus/content/groups/public/</url>
+			<layout>default</layout>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</snapshots>
+		</repository>
+	</repositories>
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>jboss-public-repository-group</id>
+			<name>JBoss Public Repository Group</name>
+			<url>http://repository.jboss.org/nexus/content/groups/public/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
